new model, smaller data, re-adding category matches

--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
                     <div class="relatedItems" id="relatedAuthor">Donald Mackenzie</div>
                 </div>
                 <div id="otherRows">
+                    <div class="relatedItems" id="relatedStoryTitle"></div>
                     <div class="relatedItems" id="relatedId">PG10089</div>
                 <div class="relatedItems" id="relatedScore"></div>
                 </div>
+            </div>
+            <div id="categoryContainer">
+                <div id="categoryBuckets"></div>
             </div>
             <!--
             <div id="chartSection">
