--- a/index.html
+++ b/index.html
@@ -21,24 +21,39 @@
         <div id="helpModal" class="modal hidden">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2>How to Use Fairy Tale Navigator</h2>
+                <h2>What's the Fairy Tale Navigator</h2>
                 <div class="help-section">
                     <h3>📚 Explore Connected Stories</h3>
-                    <p>Select any word or phrase in the text to find similar passages from other fairy tales. Watch as related text appears and words fly to themed categories!</p>
+                    <p>Select a text section to find similar passages from other fairy tale texts -- using an in-browser embedding index and search. There is no server! As you browse the story lines, watch for highlighted elements that fly into various categories. If you want to try to fill in various category buckets, you will want to select text that might "lead you" somewhere. Magical creatures are harder than you might think.</p>
                 </div>
                 <div class="help-section">
                     <h3>🎯 Category Buckets</h3>
-                    <p>The icons below show different themes (people, magic, treasure, etc.). Numbers show how many times each theme has appeared in your exploration.</p>
+                    <p>The icons were made with a glif.ai app that uses a Flux lora for a medieval style adds a label. Numbers show how many times each theme has appeared in your exploration.  They were originally seeded by looking at top unigram and bigrams, then added to during use.</p>
                 </div>
                 <div class="help-section">
-                    <h3>✨ Selection Tips</h3>
-                    <p>• Select meaningful phrases (2+ words work best)<br>
-                    • Try selecting character names, objects, or actions<br>
-                    • Watch the similarity score to see how closely related the new text is</p>
+                    <h3>Selection Similarity Embeddings</h3>
+                    <p>The score shows how "similar" a new text is to what you selected. This uses a tiny embedding model, <a href="https://huggingface.co/TaylorAI/bge-micro">bge-micro,</a> and transformers.js. The index and similarity in the browser are handled with client-vector-search.</p>
                 </div>
                 <div class="help-section">
-                    <h3>🏰 Medieval Theme</h3>
-                    <p>The golden highlights and decorative font create an authentic fairy tale reading experience inspired by illuminated manuscripts.</p>
+                    <h3>Text Source</h3>
+                    <p>The text is sourced from Gutenberg books fairy tales, processed into sentences and then classified for "descriptiveness" after training a small spaCy model. The dataset was later reduced quite a bit to a few authors, for this demo app.</p>
+                </div>
+                <div class="help-section">
+                    <h3>Who Made This and Where?</h3>
+                    <p>This was originally both a tech demo (making an in-browser fairy tale text navigator) and a toy for me to look at fairy tales. Made by <a href="https://x.com/arnicas">@arnicas</a>, the repo is at <a href="https://github.com/arnicas/fairy-tale-navigator">github.com/arnicas/fairy-tale-navigator</a>.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Category Detail Modal -->
+        <div id="categoryModal" class="modal hidden">
+            <div class="modal-content category-modal-content">
+                <span class="close" id="categoryModalClose">&times;</span>
+                <div id="categoryModalBody">
+                    <img id="categoryModalImage" alt="" class="category-modal-image" style="display: none;">
+                    <h2 id="categoryModalTitle"></h2>
+                    <div id="categoryModalCount" class="category-modal-count"></div>
+                    <div id="categoryModalMatches" class="category-modal-matches"></div>
                 </div>
             </div>
         </div>
@@ -60,6 +75,8 @@
 
             <h1 id="appTitle">Fairy Tale Text Navigator</h1>
             
+            <div id="instructions">Select a section of text to search for a new line!</div>
+            
             <div id="textContainer">
                 <div id="text">When we re-tell the old tales of our ancestors, we sit beside them over the peat-fire; and, as we glory with them in their strong heroes, and share their elemental joys and fears, we breathe the palpitating air of that old mysterious world of theirs, peopled by spirits beautiful, and strange, and awe-inspiring.</div>
                 <div id="animation"></div>
@@ -72,10 +89,6 @@
                 <div id="otherRows">
                     <div class="relatedItems" id="relatedStoryTitle"></div>
                     <div class="relatedItems" id="relatedScore"></div>
-                </div>
-                <div id="bottomRow">
-                    <div class="relatedItems" id="relatedId">PG10089</div>
-                    <div class="relatedItems empty-slot"></div>
                 </div>
             </div>
             <div id="categoryContainer">
