--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Fairy Tale Island</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Cinzel+Decorative:wght@400;700;900&family=Macondo:wght@400&family=Noto+Color+Emoji&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Cinzel+Decorative:wght@400;700;900&family=Federicka+the+Great&family=Macondo:wght@400&family=Noto+Color+Emoji&family=Patrick+Hand&display=swap" rel="stylesheet">
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script> -->
 </head>
@@ -21,26 +20,26 @@
         <div id="helpModal" class="modal hidden">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2>What's the Fairy Tale Navigator</h2>
+                <h2>What's the Fairy Tale Text Hunt?</h2>
                 <div class="help-section">
                     <h3>📚 Explore Connected Stories</h3>
-                    <p>Select a text section to find similar passages from other fairy tale texts -- using an in-browser embedding index and search. There is no server! As you browse the story lines, watch for highlighted elements that fly into various categories. If you want to try to fill in various category buckets, you will want to select text that might "lead you" somewhere. Magical creatures are harder than you might think.</p>
+                    <p>Select a text section to find similar passages from other public domain fairy tale texts &mdash; using an in-browser embedding index and search. There is no server! As you browse the story lines, watch for highlighted elements that fly into various categories and award you points, potentially. If you want to try to fill in various category buckets, you will want to select text that might "lead you" somewhere. Magical creatures are harder than you might think!</p>
                 </div>
                 <div class="help-section">
                     <h3>🎯 Category Buckets</h3>
-                    <p>The icons were made with a glif.ai app that uses a Flux lora for a medieval style adds a label. Numbers show how many times each theme has appeared in your exploration.  They were originally seeded by looking at top unigram and bigrams, then added to during use.</p>
+                    <p>Numbers show how many times each theme has appeared in your exploration, and how rare something is. Higher scores are given for rarer items. They were originally seeded by looking at top unigram and bigrams, then added to during use and weighted with Claude's help and some python code. I have no doubt missed many and will update as I play it. The icons were made with a <a href="https://glif.app/@appelsiensam/glifs/cm6y4w20b0000931xnf5p8yto">glif.ai app</a> that uses a Flux Lora for a medieval style and adds a label.</p>
                 </div>
                 <div class="help-section">
-                    <h3>Selection Similarity Embeddings</h3>
-                    <p>The score shows how "similar" a new text is to what you selected. This uses a tiny embedding model, <a href="https://huggingface.co/TaylorAI/bge-micro">bge-micro,</a> and transformers.js. The index and similarity in the browser are handled with client-vector-search.</p>
+                    <h3>Selection Similarity via Embeddings</h3>
+                    <p>The similarity score under the text shows how "similar" a new text is to what you selected. This app uses a tiny embedding model, <a href="https://huggingface.co/TaylorAI/bge-micro">bge-micro,</a> and Transformers.js. The index and similarity in the browser are handled with client-vector-search, a node package. The background color changes slightly depending on how high the similarity score is.</p>
                 </div>
                 <div class="help-section">
                     <h3>Text Source</h3>
-                    <p>The text is sourced from Gutenberg books fairy tales, processed into sentences and then classified for "descriptiveness" after training a small spaCy model. The dataset was later reduced quite a bit to a few authors, for this demo app.</p>
+                    <p>The text is sourced from Project Gutenberg book fairy tales, processed into sentences and then classified for "descriptiveness" after training a small spaCy model. The dataset was later reduced quite a bit to a very few authors, for this demo app.</p>
                 </div>
                 <div class="help-section">
-                    <h3>Who Made This and Where?</h3>
-                    <p>This was originally both a tech demo (making an in-browser fairy tale text navigator) and a toy for me to look at fairy tales. Made by <a href="https://x.com/arnicas">@arnicas</a>, the repo is at <a href="https://github.com/arnicas/fairy-tale-navigator">github.com/arnicas/fairy-tale-navigator</a>.</p>
+                    <h3>Who Made This, and More Info?</h3>
+                    <p>Not really a vibe coding thing, I've been messing with the core similarity stuff and dataset for a year now. But this was originally both a tech demo (making an in-browser fairy tale text navigator) and a toy for me to look at fairy tales content. I did get Claude's help to finish this version of the UI. Made by @arnicas/Lynn Cherny on <a href="https://x.com/arnicas">X</a>, <a href="https://bsky.app/profile/arnicas.bsky.social">Bluesky</a>, <a href="https://mstdn.social/@arnicas">mastodon</a>, and the repo is at the badly named<a href="https://github.com/arnicas/simple-embedded-text-navigator">github.com/arnicas/simple-embedded-text-navigator</a>.</p>
                 </div>
             </div>
         </div>
@@ -73,18 +72,18 @@
             </div>
             <div id="message"></div>
 
-            <h1 id="appTitle">Fairy Tale Text Navigator</h1>
+            <h1 id="appTitle">Fairy Tale Text Hunt</h1>
             
-            <div id="instructions">Select a section of text to search for a new line!</div>
+            <div id="instructions">Select a section of text (a few words) with your mouse or finger to find a new line!</div>
             
             <div id="textContainer">
-                <div id="text">When we re-tell the old tales of our ancestors, we sit beside them over the peat-fire; and, as we glory with them in their strong heroes, and share their elemental joys and fears, we breathe the palpitating air of that old mysterious world of theirs, peopled by spirits beautiful, and strange, and awe-inspiring.</div>
+                <div id="text">Loading a random fairy tale passage...</div>
                 <div id="animation"></div>
             </div>
             <div id="sourceContainer">
                 <div id="titlerow">
-                    <div class="relatedItems" id="relatedTitle">Elves and Heroes</div>
-                    <div class="relatedItems" id="relatedAuthor">Donald Mackenzie</div>
+                    <div class="relatedItems" id="relatedTitle">Loading...</div>
+                    <div class="relatedItems" id="relatedAuthor">Loading...</div>
                 </div>
                 <div id="otherRows">
                     <div class="relatedItems" id="relatedStoryTitle"></div>
@@ -92,6 +91,9 @@
                 </div>
             </div>
             <div id="categoryContainer">
+                <div id="metadataContainer">
+                    <div id="metadataBuckets"></div>
+                </div>
                 <div id="categoryBuckets"></div>
             </div>
             <!--
